Admin dashboard design started

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-./application/libraries/dompdf/include/stylesheet.cls.php
-./system/helpers/url_helper.php
+application/libraries/dompdf/include/stylesheet.cls.php
+system/helpers/url_helper.php
